##Text encoding: utf-8

2006-11-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.cc: add support for abitrary resolution image export.
	* gcu/application.h: ditto.
	* gcu/filechooser.cc: add an optional extra widget.
	* gcu/filechooser.h: ditto.
	* glade/Makefile.am: new glade file added.
	* glade/image-resolution.glade: ditto.
	* programs/crystal/application.cc: export images with arbitrary resolution.
	* programs/crystal/document.cc: ditto.

2006-10-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.cc: do not crash on startup when the LANG environment
	variable is not set. [see GChemPaint bug #18159]

2006-10-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/gtkperiodic.c: (gtk_periodic_set_property): always show the correct
	notebook page when changing color scheme.

2006-10-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/application.cc: add recent files support to gcrystal.
	* programs/crystal/window.cc: ditto.
	* programs/crystal/window.h: ditto.

2006-10-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/element.cc: support more bodr data.
	* gcu/element.h: ditto.
	* gcu/glview.cc: export image at any resolution.
	* programs/3d/window.cc: add a filter to the recent files list so
	that only supported files are listed.

2006-10-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: needs gtk+ >= 2.10.0.
	* gcu/application.cc: add a GtkRecentManager member.
	* gcu/application.h: ditto.
	* programs/3d/application.cc: implement recent files for the 3d viewer.
	* programs/3d/window.cc: ditto.

2006-10-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.cc: add screen resolution detection (assuming vertical
	and horizontal resolution are the same).
	* gcu/application.h: ditto.
	* programs/calc/gchemcalc.cc: removed obsolete headers.
	* programs/table/gchemtable-curve.cc: ditto.

2006-09-24 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* gcu/Makefile.am: Fixed automake warning.